--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Home"></activity>
+        <activity android:name=".InfoAula"></activity>
+        <activity android:name=".Home" />
         <activity android:name=".RegistrazioneActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
