--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".PrenotazioneStudenteActivity"></activity>
+        <activity android:name=".PrenotazioniAttiveActivity"></activity>
+        <activity android:name=".PrenotazioneStudenteActivity" />
         <activity android:name=".CreaCodici" />
         <activity android:name=".HomeDocente" />
         <activity android:name=".InfoAulaActivity" />
