--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,17 +15,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".GroupActivity"></activity>
-        <activity android:name=".CreaCodici"></activity>
+        <activity android:name=".PrenotazioneGruppoActivity"></activity>
+        <activity android:name=".GroupActivity" />
+        <activity android:name=".CreaCodici" />
         <activity android:name=".HomeDocente" />
         <activity android:name=".InfoAulaActivity" />
         <activity android:name=".Home" />
         <activity android:name=".RegistrazioneActivity" />
-        <activity android:name=".IscrizioneActivity"/>
-        <activity android:name=".PrenotazioneStudenteActivity"/>
-        <activity android:name=".PrenotazioniAttiveActivity"/>
+        <activity android:name=".IscrizioneActivity" />
+        <activity android:name=".PrenotazioneStudenteActivity" />
+        <activity android:name=".PrenotazioniAttiveActivity" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
