--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     //write pdf library
     implementation 'com.itextpdf:itextg:5.5.10'
     implementation 'com.journeyapps:zxing-android-embedded:3.4.0'
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-compat:28.0.0'
 }
