--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:support-compat:28.0.0'
+    implementation 'com.google.android.gms:play-services-vision:16.2.0'
 }
