--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:support-compat:28.0.0'
     implementation 'com.google.android.gms:play-services-vision:16.2.0'
+    //MODIFICA GRADLE PER MAPPE
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
