--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -30,6 +32,8 @@
         <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="barcode" />
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC7a_cSKvoRh6u-ccqs8WF-1XBXT6crVkY"/>
 
         <activity android:name=".ScanQRCodeActivity"></activity>
         <activity android:name=".MapActivity" />
